correction update on create demand

--- a/src/dms-content.html
+++ b/src/dms-content.html
@@ -89,7 +89,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     margin-top: 21px;
     margin-right: 10px;
 	}
-	input[type="date" i]{margin-left:11%;}
+	input[type="date"]{margin-left:11%;}
 	.footer{
                  background: #006cb7;
                 width: 101%;
@@ -137,7 +137,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div class="col-middle">
             <create-demand></create-demand>
         </div>
-         <div class="col-right">
+      <!--   <div class="col-right">
                     <div>&nbsp;<br/></div>
                      <div>
                      <label class="label">No. of Positions</label>
@@ -175,8 +175,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	  
 	  
                      
-</section>
-
  <paper-dropdown-menu class="display-left" label="Demand Status">
         <paper-listbox class="paper-listbox" slot="dropdown-content" on-iron-select="_oppGrpSelected">
           <paper-item class="paper-item">Demand</paper-item>
@@ -187,7 +185,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 				
 				</div>
-				</div>
+				</div>-->
     </section>
 
 
